# dimergio

./: .gitignore  README.md  SPEC.md  pyproject.toml
docs/: INDEX.md  box.md  console.md  layout.md  live.md  panel.md  progress.md  table.md
src/dimergio/: __main__.py  analyze.py  cli.py  collector.py  config.py  model.py  mover.py  pool.py  selector.py  state.py  stats.py
tests/: test_analyze.py  test_model.py  test_mover.py  test_parse.py  test_ranking.py  test_selector.py  test_tui_keys.py  test_verify.py
